--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -159,7 +159,9 @@
 								{% endif %}
 								{% endfor %}
 								{% else %}
-								<tr><td>{{ text_no_control_elements }}</td></tr>
+								<tr class="control-element">
+									<td class="field">{{ text_no_control_elements }}</td>
+								</tr>
 								{% endif %}
 							</tbody>
 						</table>
