--- a/admin/view/stylesheet/d_seo_module.css
+++ b/admin/view/stylesheet/d_seo_module.css
@@ -36,6 +36,9 @@
 .panel-default .panel-body .page-header h3 {
 	font-weight: bold;
 }
+.panel-default .panel-body .instruction {
+	padding: 30px 0px;
+}
 
 /* Modal Dialog */
 .modal-dialog {
